Added workshop functionality
