# Backend/controllers/adminController.js
@@ -1,4 +1,5 @@
 const Event = require("../models/Event");
+const Workshop = require("../models/Workshop");
 
 exports.createEvent = async (req, res) => {
 	try {
@@ -30,6 +31,66 @@ exports.getEventInfo = async (req, res) => {
 		return res.json({
 			event,
 			totalRegistrations: event.registeredUsers.length,
+		});
+	} catch (err) {
+		console.log(err);
+		return res.status(500).json({ msg: "Server Error" });
+	}
+};
+
+exports.createWorkshop = async (req, res) => {
+	try {
+		const { workshopId, name, description, date, time } = req.body;
+		const workshop = new Workshop({
+			workshopId,
+			name,
+			description,
+			date,
+			time,
+		});
+		const savedWorkshop = await workshop.save();
+		console.log("Workshop created!");
+		return res
+			.status(201)
+			.json({ msg: "Workshop created!", workshop: savedWorkshop });
+	} catch (err) {
+		console.log(err);
+		return res.status(500).json({ msg: "Server Error" });
+	}
+};
+
+exports.getWorkshopInfo = async (req, res) => {
+	try {
+		const { workshopId } = req.body;
+		let workshop;
+		if (workshopId === "1") {
+			workshop = await Workshop.findOne({ workshopId })
+				.populate("registeredUsers", "name email workshop1Id -_id")
+				.select(
+					"-_id workshopId name description date time registeredUsers"
+				);
+		} else if (workshopId === "2") {
+			workshop = await Workshop.findOne({ workshopId })
+				.populate("registeredUsers", "name email workshop2Id -_id")
+				.select(
+					"-_id workshopId name description date time registeredUsers"
+				);
+		} else if (workshopId === "3") {
+			workshop = await Workshop.findOne({ workshopId })
+				.populate("registeredUsers", "name email workshop3Id -_id")
+				.select(
+					"-_id workshopId name description date time registeredUsers"
+				);
+		} else if (workshopId === "4") {
+			workshop = await Workshop.findOne({ workshopId })
+				.populate("registeredUsers", "name email workshop4Id -_id")
+				.select(
+					"-_id workshopId name description date time registeredUsers"
+				);
+		}
+		return res.json({
+			workshop,
+			totalRegistrations: workshop.registeredUsers.length,
 		});
 	} catch (err) {
 		console.log(err);
